--- a/package.json
+++ b/package.json
@@ -9,5 +9,10 @@
     "dat"
   ],
   "author": "with-heart <with.heart+git@pm.me>",
-  "license": "LGPL-3.0-or-later"
+  "license": "LGPL-3.0-or-later",
+  "dependencies": {
+    "@tsconfig/node22": "^22.0.0",
+    "@tsconfig/strictest": "^2.0.5",
+    "@types/node": "^22.10.2"
+  }
 }
